# kuribrawl

./: .gitignore  .gitmodules  Makefile  README.md  build.bat  git.sh  icon.xcf  launch.sh  mainlib.pbi  openEditors.bat  openEditorsCxx.ps1  precomptest.pb  project.pbp
CXX/: Makefile
GraphicDesignIsMyPassion/: icon.xcf  iconAll.xcf  iconDev.xcf  iconFT.xcf  iconMinGW.xcf  iconUCRT.xcf
PureBasic/: animations.pbi  applib.pbi  data.twl  debug.pb  debugH.pbi  filelib.pb  gamelib.pbi  inputlib.pb  inputlibConstants.pbi  inputlibData.pbi  kuribrawl log.txt  loadLib.pb  main.pb  mainlib.pbi  menulib.pbi  menus.pbi  physicslib.pb  project.pbp
Ressources/: Acid Rainbows.lnk  notes.txt  testanim.xcf
Tests/: rectCirclecollision.pb
c++/: Doxyfile  Makefile  (+9 more)
kuribrawlCPP/: CMakeLists.txt  Makefile  Makefile_
kuribrawlCPP/include/: Animation.h  Binding.h  Champion.h  CollisionBoxes.h  Controller.h  ControllerState.h  ControllerType.h  ControllersData.h  CurrentAnimation.h  DataFile.h  Debug.h  DebugState.h  EnumInfo.h  EnumInfo.inl  Fighter.h  Game.h  GameData.h  InputManager.h  KBException.h  Physics.h  Port.h  app.h  common.h  defs.h  gameActions.h  input.h  inputs.h  load.h  sdlHelper.h  util.h
kuribrawlCPP/src/: Animation.cpp  Champion.cpp  Controller.cpp  ControllerType.cpp  ControllersData.cpp  CurrentAnimation.cpp  DataFile.cpp  Debug.cpp  DebugInputs.cpp  Fighter.cpp  Frame.cpp  Game.cpp  GameData.cpp  InputData.cpp  InputManager.cpp  KBException.cpp  Physics.cpp  Port.cpp  Test.cpp  app.cpp  hardCoded.cpp  input.cpp  load.cpp  main.cpp  sdlHelper.cpp  util.cpp
(+937 files in other folders)
